[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Main.theme" type="Theme" id=2]
[ext_resource path="res://entities/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/GameOverScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/background.png" type="Texture" id=5]
[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://music/clocked-in.ogg" type="AudioStream" id=7]
[ext_resource path="res://music/clocked-out.ogg" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 296, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 297 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 240.0, 289.0, 337.0, 384.0, 480.0, 528.0, 576.0, 624.0, 432.0, 192.0, 144.0 ],
"_edit_vertical_guides_": [ 240.0, 192.0, 336.0, 384.0, 144.0, 432.0, 480.0, 288.0, 528.0, 576.0, 624.0 ]
}

[node name="Gui" type="CanvasLayer" parent="."]

[node name="VBox" type="HBoxContainer" parent="Gui"]
margin_left = 24.0
margin_top = 11.0
margin_right = 724.0
margin_bottom = 83.0
theme = ExtResource( 2 )

[node name="Time" type="Label" parent="Gui/VBox"]
margin_top = 22.0
margin_right = 348.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = -2
text = "Time: 60"
align = 1
valign = 1

[node name="Cash" type="Label" parent="Gui/VBox"]
margin_left = 352.0
margin_top = 22.0
margin_right = 700.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Cash: 0$"
align = 1

[node name="Hud" type="CenterContainer" parent="Gui"]
margin_right = 768.0
margin_bottom = 768.0
mouse_filter = 2
theme = ExtResource( 2 )

[node name="Menu" parent="Gui" instance=ExtResource( 3 )]
mouse_filter = 0

[node name="GameOverScreen" parent="Gui" instance=ExtResource( 4 )]
visible = false

[node name="Bounderies" type="StaticBody2D" parent="."]
editor/display_folded = true
input_pickable = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="Bounderies"]
position = Vector2( 384, 384 )
z_index = -4096
texture = ExtResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounderies"]
position = Vector2( 384, 80 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Bounderies"]
position = Vector2( 386, 688 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bounderies"]
position = Vector2( 80, 384 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Bounderies"]
position = Vector2( 688, 383 )
shape = SubResource( 2 )

[node name="Objects" type="YSort" parent="."]

[node name="Player" parent="Objects" instance=ExtResource( 6 )]
position = Vector2( 384, 415 )
scale = Vector2( 1.5, 1.5 )

[node name="JobSpawner" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
drag_margin_h_enabled = false

[node name="ClockedIn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ClockOut" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="play" from="Gui/Menu" to="." method="_on_play"]
[connection signal="timeout" from="JobSpawner" to="." method="_on_JobSpawner_timeout"]
